test/fail/issue-2134.mo
actor class C<>() {

  private query func bad() : async() {};


}